# t5-finetuning

./: .gitignore  README.md  example.py  main.py  notebook.ipynb  pyproject.toml  sentiment.py
